--- a/sermant-integration-tests/xds-service-test/pom.xml
+++ b/sermant-integration-tests/xds-service-test/pom.xml
@@ -17,6 +17,10 @@
         <maven.compiler.target>8</maven.compiler.target>
         <spring.version>2.7.17</spring.version>
         <springcloud.version>2021.0.3</springcloud.version>
+        <httpclient.version>4.5.13</httpclient.version>
+        <okhttp2.version>2.7.5</okhttp2.version>
+        <httpclient.async.version>4.1.4</httpclient.async.version>
+        <okhttp3.version>4.9.3</okhttp3.version>
     </properties>
 
     <dependencyManagement>
@@ -32,9 +36,24 @@
     </dependencyManagement>
 
     <modules>
-        <module>spring-client</module>
-        <module>spring-server</module>
         <module>xds-service-discovery</module>
-        <module>spring-cloud-client</module>
     </modules>
+
+    <profiles>
+        <profile>
+            <id>xds-discovery</id>
+            <modules>
+                <module>spring-client</module>
+                <module>spring-server</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>xds-router-lb</id>
+            <modules>
+                <module>spring-client</module>
+                <module>spring-server</module>
+                <module>spring-cloud-client</module>
+            </modules>
+        </profile>
+    </profiles>
 </project>
