--- a/sermant-integration-tests/xds-service-test/spring-client/pom.xml
+++ b/sermant-integration-tests/xds-service-test/spring-client/pom.xml
@@ -24,7 +24,12 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
+            <version>4.5.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>${httpclient.async.version}</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp</groupId>
