xDS router and lb integration test 11
Signed-off-by: daizhenyu <1449308021@qq.com>

--- a/.github/workflows/agentcore_service_test.yml
+++ b/.github/workflows/agentcore_service_test.yml
@@ -201,24 +201,45 @@ jobs:
     strategy:
       matrix:
         include:
+          - springBootVersion: "1.5.0.RELEASE"
+            snakeyamlVersion: "1.17"
+            springCloudVersion: "Edgware.SR2"
+            okHttp2Version: "2.0.0"
+            okHttp3Version: "3.2.0"
+            httpClientVersion: "4.3.6"
+            httpAsyncClientVersion: "4.0"
+          - springBootVersion: "2.0.2.RELEASE"
+            snakeyamlVersion: "1.19"
+            springCloudVersion: "Finchley.RELEASE"
+            httpClientVersion: "4.4"
+            okHttp2Version: "2.1.0"
+            okHttp3Version: "3.5.0"
+            httpAsyncClientVersion: "4.0.1"
+          - springBootVersion: "2.1.0.RELEASE"
+            snakeyamlVersion: "1.23"
+            springCloudVersion: "Greenwich.RELEASE"
+            httpClientVersion: "4.4.1"
+            okHttp2Version: "2.2.0"
+            okHttp3Version: "3.9.1"
+            httpAsyncClientVersion: "4.0.2"
           - springBootVersion: "2.2.0.RELEASE"
             snakeyamlVersion: "1.25"
             springCloudVersion: "Hoxton.RELEASE"
-            httpClientVersion: "4.3.6"
+            httpClientVersion: "4.5"
             okHttp2Version: "2.3.0"
             okHttp3Version: "3.12.13"
             httpAsyncClientVersion: "4.1"
           - springBootVersion: "2.3.0.RELEASE"
             snakeyamlVersion: "1.26"
             springCloudVersion: "Hoxton.RELEASE"
-            httpClientVersion: "4.4.1"
+            httpClientVersion: "4.5.3"
             okHttp2Version: "2.4.0"
             okHttp3Version: "3.14.9"
             httpAsyncClientVersion: "4.1.1"
           - springBootVersion: "2.4.0"
             snakeyamlVersion: "1.27"
             springCloudVersion: "2020.0.0"
-            httpClientVersion: "4.5.6"
+            httpClientVersion: "4.5.7"
             okHttp2Version: "2.5.0"
             okHttp3Version: "4.2.2"
             httpAsyncClientVersion: "4.1.2"
